# lm-predict-thinking-edcf

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: metrics.json
results/raw/: token_prediction_runs.parquet
src/research_workspace/: experiment.py
